Revision history for App-Fasops

{{$NEXT}}

0.6.3 2019-03-14T19:45:27Z

    - Add --min and --max to `fasops xlsx`

0.6.2 2019-02-01T23:35:08Z

    - Add parse_block_array() to Common.pm
    - `fasops refine`
        - Use array to avoid IxHash

0.6.1 2019-01-25T15:45:18Z

    - Add `fasops vars`

0.6.0 2018-04-22T14:40:50Z

    - Add `fasops consensus`
    - Add poa_consensus() to Common.pm
    - Require Perl 5.18 as previous versions failed to find shared file
    - Better description() for all commands

0.5.16 2018-04-16T16:07:23Z

    - Add --simple to `fasops split`

0.5.15 2018-04-01T17:27:20Z

    - Fix maf2fas for reverse-complemented strands

0.5.14 2018-03-28T04:55:06Z

    - Update help
    - Release to CPAN

0.5.13 2018-03-24T08:15:55Z

    - Add `fasops mergecsv`, moved from egaz

0.5.12 2017-09-26T11:54:31Z

    - Add --nosingle, --noindel and --nocomplex to `fasops xlsx`

0.5.11 2016-12-19T19:56:59Z

    - Add `fasops stat`

0.5.10 2016-12-18T20:19:59Z

    - Remove dependency on List::MoreUtils
    - Move calc_ld() here

0.5.9 2016-12-17T18:06:32Z

    - Close $out_fh and $in_fh at once

0.5.8 2016-12-17T15:06:56Z

    - Add `fasops concat`

0.5.7 2016-12-17T04:57:15Z

    - Add `fasops check`

0.5.6 2016-12-16T10:30:10Z

    - Fix unknown SNPs
    - Add snp_ prefix to get_snps() and polarize_snp()

0.5.5 2016-12-16T02:52:25Z

    - Switch to Minilla
    - Improve test coverage
    - Without outgroups, consider indels occurred at target

0.5.4  2016-12-15 03:13:17 CST

    - Add `fasops xlsx`
    - show_defaults => 1 for all commands

0.5.3  2016-12-14 05:41:39 CST

    - Add get_snps(), polarize_snp()
    - Add get_indels(), polarize_indel()
    - Merge xt/11-refine.t to t/

0.5.2  2016-12-12 02:06:09 CST

    - Bring Perl 5.10 back

0.5.1  2016-12-09 21:51:44 CST

    - Drop Perl 5.10

0.5.0  2016-12-09 21:22:25 CST

    - Read from stdin

0.4.13  2016-07-07 22:32:08 CST

    - Add codecov badge

0.4.12  2016-06-30 16:35:03 CST
