@@ -2,6 +2,8 @@ Revision history for App-Fasops
 
 {{$NEXT}}
 
+    - Move command `create` from `rangeops` to here
+
 0.6.3 2019-03-14T19:45:27Z
 
     - Add --min and --max to `fasops xlsx`
